--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ h3{
     border-style: solid;
     border-radius: 5px;
     border-color: grey;
-    margin: 2%;
+    margin: 1%;
     width: 80%;
     height: 20%;
     padding: 0 2%;
@@ -78,11 +78,12 @@ p {
 
 }
 
-
 #year_title {
 
     display:block;
     margin-bottom: 0%;
+    margin-top: 1%;
+    font-size: 12px;
 
 }
 
